2006-07-20  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: simplify the sample BuildFactory,
	which runs the buildbot unit tests

	* docs/buildbot.texinfo (Index of Useful Classes): add a table of
	classes that are useful in master.cfg

2006-07-15  Brian Warner  <warner@lothar.com>

	* Makefile (some-apidocs): new target to build only some epydocs

	* setup.py: minor comment.. does the classifiers= argument prevent
	the setup.py script from working on python2.2/2.3?

	* buildbot/scripts/sample.cfg: update manhole example, arrange into
	major sections

	* buildbot/twcompat.py: fix minor typo in comments

	* buildbot/manhole.py: move all Manhole-related code out to this
	module. Implement SSH-based manholes (with TwistedConch), and move
	to conch's nifty line-editing syntax-coloring REPL shell instead
	of the boring non-editing monochromatic (and deprecated) old
	'telnet' protocol.
	* buildbot/master.py: remove all Manhole-related code
	(BuildMaster.loadConfig._add): make sure the old manhole is
	removed before we add the new one
	* docs/buildbot.texinfo (Debug options): document new Manhole options

	* buildbot/twcompat.py (_which): fix some epydoc issues
	* buildbot/status/html.py (Waterfall.__init__): same

2006-06-29  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py: get Interface from b.twcompat to hush
	deprecation warnings under newer Twisteds (by using
	zope.interface.Interface instead of old twisted.python.components
	stuff)
	* buildbot/slave/interfaces.py: same

2006-06-28  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (SVN): add --non-interactive to all
	svn commands, so it will fail immediately instead of hanging while
	it waits for a username/password to be typed in.

	* buildbot/slave/bot.py (SlaveBuilder.commandComplete): add minor
	log message if the step was shut down

	* buildbot/scripts/runner.py (SlaveOptions.longdesc): remove
	obsolete reference to mktap.
